crates/pg_syntax/tests/snapshots/postgres_regress/path@16.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: SELECT f1 AS open_path FROM PATH_TBL WHERE isopen(f1);
---
SelectStmt@0..54
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..22
    ColumnRef@7..9
      Ident@7..9 "f1"
    Whitespace@9..10 " "
    As@10..12 "AS"
    Whitespace@12..13 " "
    Ident@13..22 "open_path"
  Whitespace@22..23 " "
  From@23..27 "FROM"
  Whitespace@27..28 " "
  RangeVar@28..36
    Ident@28..36 "PATH_TBL"
  Whitespace@36..37 " "
  Where@37..42 "WHERE"
  Whitespace@42..43 " "
  FuncCall@43..52
    Ident@43..49 "isopen"
    Ascii40@49..50 "("
    ColumnRef@50..52
      Ident@50..52 "f1"
  Ascii41@52..53 ")"
  Ascii59@53..54 ";"

