crates/pg_syntax/tests/snapshots/postgres_regress/path@17.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: SELECT f1 AS closed_path FROM PATH_TBL WHERE isclosed(f1);
---
SelectStmt@0..58
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..24
    ColumnRef@7..9
      Ident@7..9 "f1"
    Whitespace@9..10 " "
    As@10..12 "AS"
    Whitespace@12..13 " "
    Ident@13..24 "closed_path"
  Whitespace@24..25 " "
  From@25..29 "FROM"
  Whitespace@29..30 " "
  RangeVar@30..38
    Ident@30..38 "PATH_TBL"
  Whitespace@38..39 " "
  Where@39..44 "WHERE"
  Whitespace@44..45 " "
  FuncCall@45..56
    Ident@45..53 "isclosed"
    Ascii40@53..54 "("
    ColumnRef@54..56
      Ident@54..56 "f1"
  Ascii41@56..57 ")"
  Ascii59@57..58 ";"

