crates/pg_syntax/tests/snapshots/postgres_regress/path@18.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: SELECT pclose(f1) AS closed_path FROM PATH_TBL;
---
SelectStmt@0..47
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..32
    FuncCall@7..16
      Ident@7..13 "pclose"
      Ascii40@13..14 "("
      ColumnRef@14..16
        Ident@14..16 "f1"
    Ascii41@16..17 ")"
    Whitespace@17..18 " "
    As@18..20 "AS"
    Whitespace@20..21 " "
    Ident@21..32 "closed_path"
  Whitespace@32..33 " "
  From@33..37 "FROM"
  Whitespace@37..38 " "
  RangeVar@38..46
    Ident@38..46 "PATH_TBL"
  Ascii59@46..47 ";"

