crates/pg_syntax/tests/snapshots/postgres_regress/path@19.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: SELECT popen(f1) AS open_path FROM PATH_TBL;
---
SelectStmt@0..44
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..29
    FuncCall@7..15
      Ident@7..12 "popen"
      Ascii40@12..13 "("
      ColumnRef@13..15
        Ident@13..15 "f1"
    Ascii41@15..16 ")"
    Whitespace@16..17 " "
    As@17..19 "AS"
    Whitespace@19..20 " "
    Ident@20..29 "open_path"
  Whitespace@29..30 " "
  From@30..34 "FROM"
  Whitespace@34..35 " "
  RangeVar@35..43
    Ident@35..43 "PATH_TBL"
  Ascii59@43..44 ";"

